@@ -5,7 +5,7 @@
 
     <groupId>com.kodedu</groupId>
     <artifactId>AsciidocFX</artifactId>
-    <version>1.7.3</version>
+    <version>1.7.4</version>
     <packaging>jar</packaging>
 
     <name>AsciidocFX</name>
@@ -353,14 +353,20 @@
                         javafx.graphics/com.sun.javafx.text=ALL-UNNAMED
                         --add-opens
                         javafx.base/com.sun.javafx.collections=ALL-UNNAMED
-                        --add-opens
-                        javafx.base/com.sun.javafx.collections=javafx.web
                         --add-exports
                         javafx.graphics/com.sun.scenario.effect.impl.prism=ALL-UNNAMED
                         --add-exports
                         javafx.graphics/com.sun.javafx.css=ALL-UNNAMED
+                        --add-opens
+                        javafx.base/com.sun.javafx.collections=javafx.web
+                        --add-opens
+                        javafx.controls/javafx.scene.control=ALL-UNNAMED
                         --add-exports
                         javafx.base/com.sun.javafx.property=ALL-UNNAMED
+                        --add-exports
+                        javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
+                        --add-modules=ALL-MODULE-PATH
+                        --add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web
                     </extraJvmArguments>
                     <!--&#45;&#45;add-opens javafx.base/com.sun.javafx.collections=javafx.web-->
                     <!--&#45;&#45;add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED-->
